# gos

./: .doxygen  CMakeLists.txt  CMakePresets.json  Makefile  README.md  apt.Msys  apt.linux  apt.msys
cmake/: FindRAGEL.cmake  x86_64-linux-gnu.cmake  x86_64-w64-mingw32.cmake  x86_64-w64-mingw64.cmake
doc/: .gitignore
inc/: libc.hpp  main.hpp  object.hpp  parser.hpp
inc/gui/: gui.hpp
inc/linux/: linux.hpp
src/: gos.lex  gos.yacc  main.cpp  object.cpp  parser.cpp
src/gui/: gui.cpp
